exports[`test should not render actions and groups for non admin 1`] = `
<tr>
  <td
    className="thin nowrap">
    <Connect(Avatar)
      hash="7daf6c79d4802916d83f6266e24850af"
      size={36} />
  </td>
  <td
    className="nowrap text-middle">
    <strong>
      John Doe
    </strong>
  </td>
</tr>
`;

exports[`test should render actions and groups for admin 1`] = `
<tr>
  <td
    className="thin nowrap">
    <Connect(Avatar)
      hash=""
      size={36} />
  </td>
  <td
    className="nowrap text-middle">
    <strong>
      Admin Istrator
    </strong>
  </td>
  <td
    className="text-right text-middle">
    organization.members.x_group(s).3
  </td>
</tr>
`;
